# ports

./: .gitignore  Cargo.toml  Makefile  README.md  ports.spec  specfile.peg
ports/: Cargo.toml
ports/src/: errors.rs  main.rs  sources.rs  util.rs  workspace.rs
specfile/: Cargo.toml
specfile/src/: errors.rs  lib.rs  macro.pest  macros.rs  specfile.pest
src/: main.rs  specfile.pest
