[package]
name = "specfile"
version = "0.1.0"
authors = ["Till Wegmueller <toasterson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
failure = "0.1.8"
failure_derive = "0.1.8"